Fix overflow when music title or artist is too long and shift elements below #2 -Also removing injected script in old folder where are not used anymore

--- a/ressources/kit.css
+++ b/ressources/kit.css
@@ -47,3 +47,9 @@
     justify-content: center;
     align-items: center;
 }
+
+.no-text-overflow-ellipsis{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
